--- a/PostEffectTest/PostEffectTest/MainForm.resx
+++ b/PostEffectTest/PostEffectTest/MainForm.resx
@@ -177,4 +177,7 @@
         YII=
 </value>
   </data>
+  <metadata name="msMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
